Updating URL fetching